# Lavoisian-Qt

./: .gitignore  CMakeLists.txt  Main.qml  Todos  main.cpp
include/lavoisian/: Core.hpp
include/lvn-gui/: AtomModel.h
qmls/components/: IconButtonText.qml  MainFooter.qml
qmls/pages/: PeriodicTable.qml
qmls/pages/Home/: HomeLayout.qml  Laws.qml  PeriodicTable.qml  PeriodicTableSearch.qml  Tables.qml  User.qml
src/: AtomModel.cpp
